--- a/business/templates/business/index.html
+++ b/business/templates/business/index.html
@@ -1,9 +1,19 @@
-{% if businesses %}
-    <ul>
-    {% for business in businesses %}
-        <li><a href="/business/{{ business.id }}/">{{ business.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No businesses available.</p>
-{% endif %}
+{% extends "base_generic.html" %}
+
+{% block content %}
+    <h1>Home</h1>
+    <p>
+        Welcome to the Business Simulator, a website to test your ideas!
+    </p>
+    {% if businesses %}
+        <p>Check out any of the following {{ businesses|length }} business(es).</p>
+        <ul>
+        {% for business in businesses %}
+            <li><a href="/business/{{ business.id }}/">{{ business.name }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No businesses created.</p>
+    {% endif %}
+{% endblock %}
+
